--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:mysql://172.31.86.120:3306/employee_management
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=remote_user
+spring.datasource.password=gs971121
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
